--- a/index.html
+++ b/index.html
@@ -25,16 +25,24 @@
                 </a>
 
                 <ul class="nav nav-pills">
-                    <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Sort Numbers</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Consultar CEP</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Check Perfect Number</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Tabuada</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Consulta SQL</a></li>
+                    <li class="nav-item"><a href="#" onclick="showContent('sort-numbers')" class="nav-link active"
+                            aria-current="page">Sort Numbers</a></li>
+                    <li class="nav-item"><a href="#" onclick="showContent('consult-cep')" class="nav-link">Consultar
+                            CEP</a>
+                    </li>
+                    <li class="nav-item"><a href="#" onclick="showContent('perfect-number')" class="nav-link">Check
+                            Perfect
+                            Number</a></li>
+                    <li class="nav-item"><a href="#" onclick="showContent('multiplication-table')"
+                            class="nav-link">Mult. Table</a></li>
+                    <li class="nav-item"><a href="#" onclick="showContent('sql-section')" class="nav-link">SQL
+                            Consult</a>
+                    </li>
                 </ul>
             </header>
         </div>
 
-        <div id="sort-numbers" class="container">
+        <div id="sort-numbers" class="container content">
             <div class="row p-5">
                 <div class="col-6">
                     <label for="number">Type a number:</label>
@@ -48,7 +56,7 @@
             </div>
         </div>
 
-        <div id="consult-cep" class="container hidden">
+        <div id="consult-cep" class="container hidden content">
             <div class="row">
                 <div class="col-6">
 
@@ -59,7 +67,7 @@
             </div>
         </div>
 
-        <div id="perfect-number" class="container hidden">
+        <div id="perfect-number" class="container hidden content">
             <div class="row">
                 <div class="col-6">
 
@@ -70,7 +78,7 @@
             </div>
         </div>
 
-        <div id="multiplication-table" class="container hidden">
+        <div id="multiplication-table" class="container hidden content">
             <div class="row">
                 <div class="col-6">
 
@@ -81,7 +89,7 @@
             </div>
         </div>
 
-        <div id="sql-section" class="container hidden">
+        <div id="sql-section" class="container hidden content">
             <div class="row">
                 <div class="col-6">
 
