:construction: removed jquery slim for ajax module

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Infortronics Test</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -42,7 +41,7 @@
             </header>
         </div>
 
-        <div id="sort-numbers" class="container content">
+        <div id="sort-numbers" class="container content hidden">
             <div class="row p-5">
                 <div class="col-6">
                     <label for="number">Type a number:</label>
@@ -57,7 +56,7 @@
             </div>
         </div>
 
-        <div id="consult-cep" class="container hidden content">
+        <div id="consult-cep" class="container content">
             <div class="row">
                 <div class="col-6">
                     <label for="cep">Insert CEP number:</label>
@@ -107,8 +106,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js"
-        integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
 
