:construction: feat correios api response render

--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
                     <button id="fetch-cep">Get CEP Info</button>
                 </div>
                 <div class="col-6">
-                    <h4 id="cep-fetched"></h4>
+                    <h4 id="cep-fetched mb-2"></h4>
+                    <div class="cep-content"></div>
                 </div>
             </div>
         </div>
@@ -109,6 +110,7 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/cep-promise/dist/cep-promise.min.js"></script>
 </body>
 
 </html>
