--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
         </div>
 
-        <div id="consult-cep" class="container content">
+        <div id="consult-cep" class="container content hidden">
             <div class="row">
                 <div class="col-6">
                     <label for="cep">Insert CEP number:</label>
@@ -70,24 +70,31 @@
             </div>
         </div>
 
-        <div id="perfect-number" class="container hidden content">
+        <div id="perfect-number" class="container hidden">
             <div class="row">
                 <div class="col-6">
-
+                    <h2>Perfect Number Checker</h2>
+                    <label for="perfect-number-input">Enter a number:</label>
+                    <input type="number" id="perfect-number-input" />
+                    <button onclick="checkPerfectNumber()">Check</button>
                 </div>
                 <div class="col-6">
-
+                    <p id="perfect-number-result"></p>
                 </div>
             </div>
         </div>
 
-        <div id="multiplication-table" class="container hidden content">
+        <div id="multiplication-table" class="container content">
             <div class="row">
                 <div class="col-6">
+                    <h2>Multiplication Table</h2>
 
+                    <label for="table-number-input">Enter a number:</label>
+                    <input type="number" id="table-number-input" />
+                    <button onclick="generateMultiplicationTable()">Generate Table</button>
                 </div>
                 <div class="col-6">
-
+                    <div id="tableOutput"></div>
                 </div>
             </div>
         </div>
