--- a/index.html
+++ b/index.html
@@ -22,39 +22,53 @@
             </a>
 
             <ul class="nav nav-pills">
-                <li class="nav-item"><a href="#" onclick="showContent('sort-numbers')"
-                        class="nav-link sort-numbers active" aria-current="page">Sort Numbers</a></li>
-                <li class="nav-item"><a href="#" onclick="showContent('consult-cep')"
-                        class="nav-link consult-cep">Consultar
-                        CEP</a>
+                <li class="nav-item">
+                    <a href="#" onclick="showContent('sort-numbers')" class="nav-link sort-numbers 
+                        active" aria-current="page">
+                        Sort Numbers
+                    </a>
                 </li>
-                <li class="nav-item"><a href="#" onclick="showContent('perfect-number')"
-                        class="nav-link perfect-number">Check
-                        Perfect
-                        Number</a></li>
-                <li class="nav-item"><a href="#" onclick="showContent('multiplication-table')"
-                        class="nav-link multiplication-table">Mult.
-                        Table</a></li>
-                <li class="nav-item"><a href="#" onclick="showContent('sql-section')" class="nav-link sql-section">SQL
-                        Consult</a>
+                <li class="nav-item">
+                    <a href="#" onclick="showContent('consult-cep')" class="nav-link consult-cep">
+                        Consultar CEP
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" onclick="showContent('perfect-number')" class="nav-link perfect-number">
+                        Check Perfect Number
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" onclick="showContent('multiplication-table')" class="nav-link multiplication-table">
+                        Mult. Table
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" onclick="showContent('sql-section')" class="nav-link sql-section">
+                        SQL Consult
+                    </a>
                 </li>
             </ul>
         </header>
     </div>
 
     <main>
-        <div id="sort-numbers" class="container content">
+        <div id="sort-numbers" class="container content hidden">
             <div class="row p-5">
                 <div class="col-12">
                     <div class="w-50 m-auto">
-                        <label for="number"><small>Type a number:</small></label>
+                        <label for="number">
+                            <small>Type a number:</small>
+                        </label>
                         <input class="form-control mt-1" type="number" id="number" />
 
                         <div class="text-center mt-3">
-                            <button class="btn btn-primary m-auto" onclick="sortNumbers.addNumber()">Add number</button>
+                            <button class="btn btn-primary m-auto" onclick="sortNumbers.addNumber()">
+                                Add number
+                            </button>
                         </div>
                     </div>
-                    <hr class="m-auto mt-4 mb-4"/>
+                    <hr class="m-auto mt-4 mb-4" />
                 </div>
                 <div class="col-12">
                     <div class="w-50 m-auto">
@@ -71,16 +85,32 @@
             </div>
         </div>
 
-        <div id="consult-cep" class="container content hidden">
-            <div class="row">
-                <div class="col-6">
-                    <label for="cep">Insert CEP number:</label>
-                    <input type="text" id="cep" />
-                    <button class="btn btn-primary" id="fetch-cep">Get CEP Info</button>
+        <div id="consult-cep" class="container content">
+            <div class="row p-5">
+                <div class="col-12">
+                    <div class="w-50 m-auto">
+                        <label for="cep">
+                            <small>Insert CEP number:</small>
+                        </label>
+                        <input class="form-control mt-1" type="text" id="cep" />
+
+                        <div class="text-center mt-3">
+                            <button class="btn btn-primary" id="fetch-cep">
+                                <span class="spinner-border spinner-border-sm hidden" aria-hidden="true"></span>
+                                <span class="getting-cep visually-hidden" role="status">Getting address...</span>
+                                <span class="get-cep">Get address</span>
+                            </button>
+                        </div>
+                    </div>
+                    <hr class="m-auto mt-4 mb-4" />
                 </div>
-                <div class="col-6">
-                    <h4 id="cep-fetched mb-2"></h4>
-                    <div class="cep-content"></div>
+                <div class="col-12">
+                    <div class="w-50 m-auto">
+                        <div class="text-center m-auto">
+                            <table class="table table-cep table-striped border">
+                            </table>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -141,7 +171,7 @@
             </div>
         </div>
 
-        <div class="container">
+        <div class="container fixed-bottom">
             <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
                 <p class="col-md-4 mb-0 text-body-secondary">© 2023 Company, Inc</p>
 
