:construction: final touches

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 </div>
                 <div class="col-12">
                     <div class="w-50 m-auto">
-                        <ul class="list-group mt-3 mb-3" id="mult-result"></ul>
+                        <ul class="list-group mt-3 mb-3 text-center" id="mult-result"></ul>
                     </div>
                 </div>
             </div>
