--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
             <a href="/"
                 class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-                <svg class="bi me-2" width="40" height="32">
-                    <use xlink:href="#bootstrap"></use>
-                </svg>
                 <span class="fs-4">Infortronics</span>
             </a>
 
@@ -54,7 +51,7 @@
 
     <main>
         <div id="sort-numbers" class="container content">
-            <div class="row p-5">
+            <div class="row p-3">
                 <div class="col-12">
                     <div class="w-50 m-auto">
                         <label for="number">
@@ -86,7 +83,7 @@
         </div>
 
         <div id="consult-cep" class="container content hidden">
-            <div class="row p-5">
+            <div class="row p-3">
                 <div class="col-12">
                     <div class="w-50 m-auto">
                         <label for="cep">
@@ -106,8 +103,8 @@
                 </div>
                 <div class="col-12">
                     <div class="w-50 m-auto">
-                        <div class="text-center m-auto">
-                            <table class="table table-cep table-striped border">
+                        <div class="div-cep text-center m-auto">
+                            <table class="table table-cep table-striped">
                             </table>
                         </div>
                     </div>
@@ -116,7 +113,7 @@
         </div>
 
         <div id="perfect-number" class="container content hidden">
-            <div class="row p-5">
+            <div class="row p-3">
                 <div class="col-12">
                     <div class="w-50 m-auto">
                         <label for="perfect-number-input">
@@ -136,7 +133,7 @@
         </div>
 
         <div id="multiplication-table" class="container content hidden">
-            <div class="row p-5">
+            <div class="row p-3">
                 <div class="col-12">
                     <div class="w-100 m-auto">
                         <label for="mult-input">
@@ -193,7 +190,7 @@
 
         <div class="container fixed-bottom">
             <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-3 border-top">
-                <p class="col-md-6 mb-0 text-body-secondary">© 2023 Company, Inc</p>
+                <p class="col-md-6 mb-0 text-body-secondary">© 2023 Infortronics, Inc</p>
 
                 <ul class="nav col-md-6 justify-content-end">
                     <li class="nav-item">
@@ -236,8 +233,8 @@
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/cep-promise/dist/cep-promise.min.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
